feat: introduce -version cli and /version endpoint
